[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Bus/passenger_2.png" type="Texture" id=1]
[ext_resource path="res://assets/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Speech Text/SpeechText.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Bus/bus interior.png" type="Texture" id=4]
[ext_resource path="res://assets/Bus/passenger_1.png" type="Texture" id=5]
[ext_resource path="res://Rooms/Bus.gd" type="Script" id=6]
[ext_resource path="res://assets/Bus/old_man.png" type="Texture" id=7]
[ext_resource path="res://assets/AnxietyMeter/AnxietyMeter.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Skip/Skip.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Streets/arrow.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 208, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 112 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 84.7707 )

[sub_resource type="Animation" id=5]
resource_name = "moveRight"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 169, 110.13 ), Vector2( 190, 110.13 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "moveRight"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 299.727, 110.13 ), Vector2( 325.899, 110.13 ) ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 22.3101
height = 0.0

[node name="BusScene" type="Node2D"]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SpeechText" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false
use_parent_material = true
margin_left = -0.529739
margin_top = 106.119
margin_right = -0.529724
margin_bottom = 108.039
rect_scale = Vector2( 0.993637, 1.08811 )

[node name="AnxietyMeter" parent="CanvasLayer" instance=ExtResource( 8 )]
margin_left = 169.0
margin_right = 169.0
rect_scale = Vector2( 0.49031, 0.518644 )

[node name="Skip" parent="CanvasLayer" instance=ExtResource( 9 )]
rect_scale = Vector2( 0.72, 0.84 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="bus interior" type="Sprite" parent="StaticBody2D"]
position = Vector2( 208, 89.6389 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="bottom" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 206.74, 203.78 )
shape = SubResource( 1 )

[node name="top" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 208, 96 )
shape = SubResource( 1 )

[node name="left" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -16.63, 121.449 )
shape = SubResource( 2 )

[node name="old_man" type="Sprite" parent="StaticBody2D"]
position = Vector2( 149.214, 87.0982 )
scale = Vector2( 1.27533, 1.27533 )
texture = ExtResource( 7 )

[node name="music_dude" type="AnimatedSprite" parent="StaticBody2D"]
position = Vector2( 317.475, 61.472 )
frames = SubResource( 3 )
playing = true

[node name="right" type="Area2D" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/right"]
position = Vector2( 422.971, 92.9191 )
shape = SubResource( 4 )

[node name="arrow" type="Sprite" parent="."]
position = Vector2( 183.839, 110.13 )
scale = Vector2( 0.742235, 0.578448 )
texture = ExtResource( 10 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="arrow"]
autoplay = "moveRight"
anims/moveRight = SubResource( 5 )

[node name="arrow2" type="Sprite" parent="."]
position = Vector2( 312.21, 110.13 )
scale = Vector2( 0.742235, 0.578448 )
texture = ExtResource( 10 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="arrow2"]
autoplay = "moveRight"
anims/moveRight = SubResource( 6 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 63.6472, 112.676 )
scale = Vector2( 3.06442, 2.2579 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -3.8147e-06, -10.6293 )
scale = Vector2( 0.997433, 0.967831 )
current = true
limit_left = 0
limit_right = 410

[node name="CardReader" type="Area2D" parent="."]
position = Vector2( -7.62939e-06, -7.62939e-06 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardReader"]
position = Vector2( 122.548, 128.378 )
shape = SubResource( 7 )

[node name="CardReaderTimer" type="Timer" parent="."]

[connection signal="area_entered" from="StaticBody2D/right" to="." method="_on_right_area_entered"]
[connection signal="area_entered" from="CardReader" to="." method="_on_CardReader_area_entered"]
[connection signal="area_exited" from="CardReader" to="." method="_on_CardReader_area_exited"]
